# pypp-cli

./: .gitignore  MANIFEST.in  notes.md  pyproject.toml  readme.md  things_cant_do.md  work.md
compy_cli/test_dir/cpp/: CMakeLists.txt  glfw_test.cpp  glfw_test_2.cpp  main.cpp  second_executable_example.cpp
compy_cli/test_dir/cpp/compy/: py_list.h
compy_cli/test_dir/cpp/libs/compy_bridge_lib_glfw/: hello_world.cpp  hello_world.h
compy_cli/test_dir/cpp/libs/compy_bridge_library_test_0/: custom_list.h  custom_mapping_starts_with_call.h
compy_cli/test_dir/cpp/libs/compy_pure_library_test_0/: first.cpp  first.h  hello_world.h
compy_cli/test_dir/cpp/libs/pypp_bridge_library_test_1/: fourth.h  second_other_name.h
compy_cli/test_dir/cpp/src/: args_test.cpp  args_test.h  constants.cpp  constants.h  first.cpp  fourth.h  lambdas.cpp  number_types.cpp  operations.cpp  operations.h  ref_vars.cpp  second.cpp  second.h  subscriptable_types.cpp  third.h  type_aliases.cpp
compy_cli/test_dir/cpp/src/classes/: first.cpp  inheritance.cpp  nested_dependencies.cpp
compy_cli/test_dir/cpp/src/compy_union/: first.cpp  first.h
compy_cli/test_dir/cpp/src/dataclasses_test/: first.cpp  with_methods.cpp  with_methods.h
compy_cli/test_dir/cpp/src/default_dict/: first.cpp
compy_cli/test_dir/cpp/src/dicts/: comprehensions.cpp  comprehensions.h  exceptions.cpp  first.cpp
compy_cli/test_dir/cpp/src/exceptions/: assert_.cpp  custom_exceptions.cpp  custom_exceptions.h  throw_.cpp
compy_cli/test_dir/cpp/src/file_io/: first.cpp
compy_cli/test_dir/cpp/src/fn_as_vars/: first.cpp
compy_cli/test_dir/cpp/src/if_elif_else/: if_elif_else.cpp
compy_cli/test_dir/cpp/src/imports_test/: first.cpp  second.cpp
compy_cli/test_dir/cpp/src/inconsistent_behviour/: editing_a_reference.cpp
compy_cli/test_dir/cpp/src/interfaces/: first.cpp
compy_cli/test_dir/cpp/src/lists/: as_arg.cpp  as_arg.h  comprehensions.cpp  exceptions.cpp  exceptions.h  lists.cpp  ownership.cpp
compy_cli/test_dir/cpp/src/loops/: enumerate_.cpp  enumerate_.h  for_.cpp  reversed_.cpp  reversed_.h  while_.cpp  while_.h  zip_.cpp
compy_cli/test_dir/cpp/src/math_library/: first.cpp
compy_cli/test_dir/cpp/src/numbers_test/: first.cpp
compy_cli/test_dir/cpp/src/printing/: first.cpp
compy_cli/test_dir/cpp/src/pypp_union/: first.cpp
compy_cli/test_dir/cpp/src/random_library/: first.cpp  first.h
compy_cli/test_dir/cpp/src/ranges/: first.cpp
compy_cli/test_dir/cpp/src/readme_examples/: classes.h  first.cpp  first.h  not_out_of_scope.cpp  out_of_scope.cpp  pass_by_value.cpp  union.cpp
compy_cli/test_dir/cpp/src/sets/: comprehensions.cpp  exceptions.cpp  first.cpp  first.h  of_tuples.cpp
compy_cli/test_dir/cpp/src/slices/: first.cpp
compy_cli/test_dir/cpp/src/strings/: escape_characters.cpp  exceptions.cpp  exceptions.h  f_strings.cpp  f_strings.h  first.cpp
compy_cli/test_dir/cpp/src/time_library/: first.cpp
compy_cli/test_dir/cpp/src/tuples/: exceptions.cpp  exceptions.h  first.cpp
compy_cli/test_dir/cpp/src/yields/: first.cpp  (+1 more)
cpp_template/: CMakeLists.txt
cpp_template/pypp/: py_dict.h  py_list.h  py_np_array.h  py_set.h  py_slice.h  py_str.cpp  py_str.h  py_tuple.h
cpp_template/pypp/pypp_util/: print_py_value.h
test_dir/.pypp/cpp/: CMakeLists.txt  main.cpp  opengl_test.cpp
test_dir/.pypp/cpp/libs/: pypp_pure_library_test_0.h
test_dir/.pypp/cpp/other_src/: first.h
test_dir/.pypp/cpp/src/: augment_operations.cpp  bridge_jsons_test.cpp  bridge_jsons_test.h  empty_return.cpp  first.cpp  fourth.h  operations.cpp  pass_by_value.cpp  ref_vars.h  second.h  ternary_op.cpp  ternary_op.h  third.h  transpiler_config_test.cpp  transpiler_config_test.h  triple_quote_strings.h  type_aliases.cpp  using_pass.cpp
test_dir/cpp/: CMakeLists.txt  main.cpp  main2.cpp
test_dir/cpp/pypp/: np_arr.h  py_dict.h  py_list.h  py_slice.cpp  py_str.cpp  py_str.h  py_type_traits.h
test_dir/cpp/src/: constants.cpp  constants.h  first.cpp  first.h  fourth.cpp  fourth.h  if_elif_else.cpp  if_elif_else.h  operations.cpp  ref_vars.cpp  second.cpp  second.h  third.cpp  third.h  type_aliases.cpp  type_aliases.h
test_dir/cpp/src/classes/: first.cpp  first.h  inheritance.cpp  inheritance.h  more_tests.cpp  only_h_file.h
test_dir/cpp/src/dataclasses/: first.cpp  first.h  only_h_file.h  with_methods.cpp  with_methods.h
test_dir/cpp/src/default_dict/: first.cpp  first.h
test_dir/cpp/src/dicts/: comprehensions.cpp  exceptions.cpp  exceptions.h  first.cpp  first.h
test_dir/cpp/src/exceptions/: assert_.cpp
test_dir/cpp/src/excpetions/: assert_.cpp  assert_.h  throw_.cpp  throw_.h
test_dir/cpp/src/file_io/: first.cpp  first.h
test_dir/cpp/src/fn_as_vars/: first.cpp  first.h
test_dir/cpp/src/if_elif_else/: if_elif_else.cpp
test_dir/cpp/src/imports_test/: second.h
test_dir/cpp/src/inconsistent_behviour/: editing_a_reference.cpp  editing_a_reference.h
test_dir/cpp/src/interfaces/: first.cpp  first.h
test_dir/cpp/src/lists/: as_arg.cpp  as_arg.h  comprehensions.cpp  comprehensions.h  exceptions.cpp  exceptions.h  lists.cpp  lists.h
test_dir/cpp/src/loops/: enumerate_.cpp  enumerate_.h  for_.cpp  for_.h  reversed_.cpp  while_.cpp  while_.h  zip_.cpp  zip_.h
test_dir/cpp/src/math_library/: first.cpp
test_dir/cpp/src/numbers/: first.cpp  first.h
test_dir/cpp/src/numbers_test/: first.cpp
test_dir/cpp/src/numpy_arrays/: exceptions.cpp  exceptions.h  first.cpp  first.h
test_dir/cpp/src/printing/: first.cpp
test_dir/cpp/src/pypp_union/: first.cpp  first.h
test_dir/cpp/src/ranges/: first.cpp  first.h
test_dir/cpp/src/sets/: comprehensions.cpp  comprehensions.h  exceptions.cpp  exceptions.h  first.cpp  first.h  of_tuples.cpp  of_tuples.h
test_dir/cpp/src/slices/: first.cpp  first.h
test_dir/cpp/src/strings/: escape_characters.cpp  escape_characters.h  exceptions.cpp  exceptions.h  f_strings.cpp  f_strings.h  first.cpp  first.h
test_dir/cpp/src/time_library/: first.cpp  first.h
test_dir/cpp/src/tuples/: exceptions.cpp  exceptions.h  first.cpp  first.h
test_dir/cpp/src/yields/: first.cpp  first.h
(+2114 files in other folders)
