[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "compy_cli"
version = "0.0"
description = "A CLI tool called compy"
authors = [
    { name="Curtis Puetz", email="compy.main@gmail.com" }
]
readme = "readme.md"
license = { text = "MIT" }
requires-python = ">=3.13"
urls = { "Homepage" = "https://github.com/curtispuetz/compy-cli" }


[project.scripts]
compy = "compy_cli.cli:main_cli"

[tool.hatch.build]
include = [
    "compy_cli/cli.py",
    "compy_cli/data/**/*",
    "compy_cli/src/**/*"
]


[tool.ruff]
lint.ignore = [
    "E731", # assigning a lambda expression to a var
    "E741", # ambiguous variable names (i.e. 'l', 'O', 'I')
]
lint.select = ["E", "F", "ARG"]
line-length = 88